Fixup style a bit so it looks better on mobile.

--- a/WebApp/Content/Site.css
+++ b/WebApp/Content/Site.css
@@ -13,11 +13,3 @@ td.rank
 .selected-language {
     background-color: #f5f5f5;
 }
-
-.date-selection {
-    width: 120px;
-}
-
-.date-range-selection {
-    width: 120px;
-}
